<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.itquasar.multiverse.jmacro</groupId>
    <artifactId>jmacro</artifactId>
    <packaging>pom</packaging>
    <version>0.1.0-SNAPSHOT</version>

    <name>JMacro</name>
    <description>JMacro parent pom</description>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.version>3.8.1</maven.compiler.version>

        <jvm.argLine>--add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED
        </jvm.argLine>

        <source.encoding>UTF-8</source.encoding>
        <project.build.sourceEncoding>${source.encoding}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${source.encoding}</project.reporting.outputEncoding>

        <lombok.version>1.18.20</lombok.version>
        <checker.version>3.18.0</checker.version>

        <groovy.version>3.0.9</groovy.version>
        <gmavenplus.version>1.13.0</gmavenplus.version>

        <spock.version>2.0-groovy-3.0</spock.version>
        <spotbugs.version>4.4.1</spotbugs.version>

        <javalin.version>4.0.0</javalin.version>
        <httpclient5.version>5.1</httpclient5.version>
    </properties>

    <modules>
        <module>jmacro-bom</module>
        <module>jmacro-docs</module>
        <module>jmacro-core</module>
        <module>jmacro-rest</module>
        <module>jmacro-commands</module>
        <module>jmacro-tests</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.version}</version>
                    <inherited>true</inherited>
                    <configuration>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.gmavenplus</groupId>
                    <artifactId>gmavenplus-plugin</artifactId>
                    <version>${gmavenplus.version}</version>
                    <inherited>true</inherited>
                    <executions>
                        <execution>
                            <goals>
                                <goal>addSources</goal>
                                <goal>addTestSources</goal>
                                <goal>generateStubs</goal>
                                <goal>compile</goal>
                                <goal>generateTestStubs</goal>
                                <goal>compileTests</goal>
                                <goal>removeStubs</goal>
                                <goal>removeTestStubs</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <!-- Optional plugins for using Spock -->
                <!-- Only required if names of spec classes don't match default Surefire patterns (`*Test` etc.) -->
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M5</version>
                    <configuration>
                        <useModulePath>false</useModulePath>
                        <!-- https://issues.apache.org/jira/browse/SUREFIRE-1809 -->
                        <useFile>false</useFile>
                        <includes>
                            <include>**/*Test</include>
                            <include>**/*Spec</include>
                        </includes>
                        <argLine>${jvm.argLine}</argLine>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>com.github.spotbugs</groupId>
                    <artifactId>spotbugs-maven-plugin</artifactId>
                    <version>${spotbugs.version}</version>
                    <dependencies>
                        <dependency>
                            <groupId>com.github.spotbugs</groupId>
                            <artifactId>spotbugs</artifactId>
                            <version>${spotbugs.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-pmd-plugin</artifactId>
                    <version>3.15.0</version>
                </plugin>
                <!-- <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>3.1.2</version>
                    <configuration>
                        <configLocation>checkstyle.xml</configLocation>
                        <encoding>UTF-8</encoding>
                        <consoleOutput>true</consoleOutput>
                        <failsOnError>true</failsOnError>
                        <linkXRef>false</linkXRef>
                    </configuration>
                    <executions>
                        <execution>
                            <id>validate</id>
                            <phase>validate</phase>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin> -->
            </plugins>
        </pluginManagement>

        <plugins>
            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-enforcer-plugin</artifactId>-->
            <!--                <version>3.0.0</version>-->
            <!--                <executions>-->
            <!--                    <execution>-->
            <!--                        <id>enforce-versions</id>-->
            <!--&lt;!&ndash;                        <goals>&ndash;&gt;-->
            <!--&lt;!&ndash;                            <goal>enforce</goal>&ndash;&gt;-->
            <!--&lt;!&ndash;                        </goals>&ndash;&gt;-->
            <!--                        <configuration>-->
            <!--                            <rules>-->
            <!--                                <requireMavenVersion>-->
            <!--                                    <version>3.8.2</version>-->
            <!--                                </requireMavenVersion>-->
            <!--                                <requireJavaVersion>-->
            <!--                                    <version>17</version>-->
            <!--                                </requireJavaVersion>-->
            <!--                                &lt;!&ndash; <requireOS><!- - Needed if using jrpm or jdeb - ->-->
            <!--                                    <family>unix</family>-->
            <!--                                </requireOS>&ndash;&gt;-->
            <!--                                <reactorModuleConvergence>-->
            <!--                                    <message>The reactor is not valid</message>-->
            <!--                                    &lt;!&ndash; <ignoreModuleDependencies>true</ignoreModuleDependencies>&ndash;&gt;-->
            <!--                                </reactorModuleConvergence>-->
            <!--                                <requireNoRepositories>-->
            <!--                                    <message>Best Practice is to never define repositories in pom.xml (use a repository manager instead)</message>-->
            <!--                                </requireNoRepositories>-->
            <!--                                &lt;!&ndash;?:q<requireReleaseDeps>-->
            <!--                                    <message>No Snapshots Allowed!</message>-->
            <!--                                </requireReleaseDeps>&ndash;&gt;-->
            <!--                                &lt;!&ndash;<requireReleaseVersion>-->
            <!--                                    <message>No Snapshots Allowed!</message>-->
            <!--                                </requireReleaseVersion>-->
            <!--                                <requireSnapshotVersion>-->
            <!--                                    <message>No Releases Allowed!</message>-->
            <!--                                </requireSnapshotVersion>&ndash;&gt;-->
            <!--                                <dependencyConvergence>-->
            <!--                                    <uniqueVersions>true</uniqueVersions>-->
            <!--                                </dependencyConvergence>-->
            <!--                                <requireUpperBoundDeps>-->
            <!--                                    <uniqueVersions>true</uniqueVersions>-->
            <!--                                </requireUpperBoundDeps>-->
            <!--                                <banDuplicatePomDependencyVersions/>-->

            <!--                            </rules>-->
            <!--                        </configuration>-->
            <!--                    </execution>-->
            <!--                </executions>-->
            <!--            </plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-toolchains-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <toolchains>
                        <jdk>
                            <version>17</version>
                        </jdk>
                    </toolchains>
                </configuration>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>toolchain</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>3.0.0-M4</version>
            </plugin>
        </plugins>
    </build>

</project>
